# rsopenapi_ros

./: .gitmodules  README.md
rs_bridge/: CMakeLists.txt  package.xml
rs_bridge/config/: joystick.yaml
rs_bridge/launch/: joystick.launch.py  rs_bridge_launch.py
rs_bridge/scripts/: install_requirements.sh
rs_bridge/src/: rs_bridge_node.cpp
rs_bridge_msgs/: CMakeLists.txt  package.xml
rs_bridge_msgs/action/: Kick.action
rs_bridge_msgs/msg/: BallPickup.msg  HwStatus.msg  Metadata.msg  Object.msg  PassDetail.msg  PassRequest  PassRequest.msg  PlayerStatus.msg  WorldModel.msg
